[package]
name = "firewall-aya"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = { version = ">=0.11", features=["async_tokio"] }
aya-log = "0.1"
clap = { version = "4.1", features = ["derive"] }
firewall-aya-common = { path = "../firewall-aya-common", features = ["user"] }
anyhow = "1"
env_logger = "0.10"
log = "0.4"
tokio = { version = "1.25", features = ["macros", "rt", "rt-multi-thread", "net", "signal"] }
nfq = "0.2.5"
etherparse = "0.9"

[[bin]]
name = "firewall-aya"
path = "src/main.rs"
